<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_bold"
                android:padding="10dp"
                android:text="@string/categories"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <SearchView
                    android:id="@+id/search_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_search"
                    android:iconifiedByDefault="false"
                    android:queryBackground="@color/transparent"
                    android:queryHint="Search recipe"
                    android:theme="@style/Theme.MyRecipe"/>

            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                tools:itemCount="1"
                tools:listitem="@layout/rv_category"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_bold"
                android:paddingStart="10dp"
                android:text="@string/dishes"
                android:id="@+id/tv_categoryMain"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_dish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                tools:itemCount="1"
                tools:listitem="@layout/rv_dishes"/>

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/add_recipe"
                android:textColor="@color/white"
                android:backgroundTint="@color/astronaut"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>