<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appBar"
        android:theme="@style/Theme.AppCompat.NoActionBar"
        android:background="@color/transparent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:contentScrim="@color/bunting"
            app:expandedTitleMarginStart="16dp"
            app:expandedTitleMarginEnd="72dp"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:id="@+id/img_item"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:src="@drawable/item"
                app:layout_collapseParallaxMultiplier="0.7"
                app:riv_corner_radius_bottom_right="20dp"
                app:riv_corner_radius_bottom_left="20dp"/>

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:id="@+id/toolbar"
                app:layout_scrollFlags="scroll|enterAlways"
                app:titleTextColor="@color/white"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_12sdp"
                android:paddingTop="@dimen/_8sdp"
                android:paddingEnd="@dimen/_4sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:layout_margin="@dimen/_10sdp"
                android:layout_gravity="start"
                android:backgroundTint="@color/astronaut"
                android:id="@+id/imgToolbarBtnBack"
                android:src="@drawable/icon_back"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/nestedScrollView"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gilroy_bold"
                        android:textAlignment="center"
                        android:padding="10dp"
                        android:hint="@string/dish_name"
                        android:id="@+id/tvDishName"
                        android:textColor="@color/black"
                        android:textSize="25sp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_bold"
                android:paddingStart="10dp"
                android:text="@string/category"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinnerCategory"
                        android:textSize="15sp"
                        android:textColor="@color/hintTextColor"
                        android:textStyle="bold"
                        android:fontFamily="@font/gilroy_light"
                        android:paddingTop="10dp"
                        android:paddingStart="5dp"
                        android:paddingBottom="10dp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_bold"
                android:paddingStart="10dp"
                android:text="@string/ingredients"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvIngredients"
                        android:textSize="15sp"
                        android:textColor="@color/hintTextColor"
                        android:textStyle="bold"
                        android:fontFamily="@font/gilroy_light"
                        android:paddingTop="10dp"
                        android:paddingStart="5dp"
                        android:paddingBottom="10dp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_bold"
                android:paddingStart="10dp"
                android:text="@string/instructions"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvInstructions"
                        android:textSize="15sp"
                        android:textColor="@color/hintTextColor"
                        android:textStyle="bold"
                        android:fontFamily="@font/gilroy_light"
                        android:paddingTop="10dp"
                        android:paddingStart="5dp"
                        android:paddingBottom="10dp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_bold"
                android:paddingStart="10dp"
                android:text="@string/image_url"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvImageURL"
                        android:textSize="15sp"
                        android:textColor="@color/hintTextColor"
                        android:textStyle="bold"
                        android:fontFamily="@font/gilroy_light"
                        android:paddingTop="10dp"
                        android:paddingStart="5dp"
                        android:paddingBottom="10dp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnSave"
                android:textColor="@color/white"
                android:layout_margin="@dimen/_10sdp"
                android:paddingStart="@dimen/_20sdp"
                android:paddingEnd="@dimen/_20sdp"
                android:backgroundTint="@color/astronaut"
                android:text="@string/save"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>